# gpulab

Convolution/: CMakeLists.txt  Makefile  convolution.pro  convolution.vcproj
Convolution/src/: convolution_cpu.cpp  convolution_gpu.cu
Diffusion/: .cproject  .project  CMakeLists.txt  Makefile  diffusion.pro  diffusion.vcproj
Diffusion/src/: diffusion.cu
Gradient/: .cproject  .project  CMakeLists.txt  Makefile  gradient.cu  gradient.pro
SquareArray/: Makefile  squareArray  squareArray.cu  squareArray.vcproj
